@@ -2,21 +2,24 @@ package com.oycm.utils;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class ReadFileUtils {
 
-    public static String readFile(String filePath) throws IOException {
+    public static String readFile(String filePath) {
         File file = new File(filePath);
         if (!file.exists()) {
-            throw new IOException("File not found: " + filePath);
+            throw new RuntimeException("File not found: " + filePath);
         }
 
         // 读取文件内容
 
-        return new String(Files.readAllBytes(Paths.get(filePath)), StandardCharsets.UTF_8).trim();
+        try {
+            return Files.readString(Paths.get(filePath)).trim();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
 }
